# center-console

./: .gitignore  .gitlab-ci.yml  .gitlab-mirror-test  Dockerfile  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: docker-build.yml
pages/: algo.py  button_test.py  changelog.py  flyway.py  get-flyway-migrations.py  get_flyway_migrations.py  get_media.py  media-pipeline.py  media.py  media_pipeline.py  page2.py  prediction.py  prediction_anomalies.py  training.py  training_anomalies.py  training_backlog.py  training_search.py
